crates/clan/clan-core/tests/snapshots/transform_golden__combtier_coding@rust.snap
---
source: crates/talkbank-clan/tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;00.||||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
*CHI:	hello there .
%com:	first comment second comment
*MOT:	goodbye now .
%com:	only comment
@End
