crates/clan/clan-core/tests/snapshots/transform_golden__dates_speaker_info@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng, ara
@Participants:	CHI Child, MOT Mother, F_A'-T Father
@ID:	eng, ara|corpus|CHI|1;08.02|female|normal||Child|||
@ID:	eng, ara|corpus|MOT||female|||Mother|||
@ID:	eng, ara|corpus|F_A'-T|||||Father|||
@Birth of CHI:	28-JUN-2001
@Birth of MOT:	15-MAR-1975
@Birthplace of MOT:	Taipei, Taiwan
@L1 of F_A'-T:	ara
@Comment:	Speaker info headers: @Birth of, @Birthplace of, @L1 of
@Comment:	Constructs: birth_of_header, birthplace_of_header, l1_of_header,
	age_format, multiple @Languages codes, participant with special chars
*CHI:	mama !
*MOT:	what is it ?
*F_A'-T:	she wants her toy .
@End
