crates/clan/clan-core/tests/snapshots/transform_golden__delim_retrace@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|corpus|CHI|3;0||||Child|||
@ID:	eng|corpus|MOT|||||Mother|||
@Comment:	Retrace annotations: partial [/], complete [//], multiple [///],
	uncertain [/?], reformulation [/-]
@Comment:	Constructs: retrace_partial, retrace_complete, retrace_multiple,
	retrace_uncertain, retrace_reformulation
*CHI:	I [/] I want that .
*MOT:	the dog [//] the cat ran .
*CHI:	I want the [///] give me that .
*MOT:	is that [/?] a toy ?
*CHI:	ana [//] an .
*MOT:	the book [/-] the magazine is here .
@End
