crates/clan/clan-core/tests/snapshots/transform_golden__fixbullets_bullets@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
@UTF8
@Begin
@Languages:	eng
@Participants:	CHI Child, MOT Mother
@ID:	eng|sample|CHI|2;0||||Child|||
@ID:	eng|sample|MOT|||||Mother|||
@Media:	media-bullets, video
@Comment:	Inline timing bullets on main tier and dependent tiers, inline_pic
@Comment:	Constructs: inline_bullet, timing_annotation, text_with_bullets,
	text_with_bullets_and_pics, media bullets on dependent tiers, inline_pic
*CHI:	hello there . 2041689_2042652
%cod:	this is junk 2041689_2042652
*MOT:	how are you ? 5041689_5042652
%act:	foo 2061689_2062652 bar 2061689_2062652
%com:	pic002 %pic:"a18/image002.jpg"
@End
