crates/clan/clan-core/tests/snapshots/transform_golden__flo_eng@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
*SPE:	Triangle kept going .
%flo:	Triangle kept going .
%mor:	noun|triangle verb|keep-Fin-Ind-Past-S3-irr verb|go-Ger-S .
%gra:	1|2|NSUBJ 2|0|ROOT 3|2|XCOMP 4|2|PUNCT
*GES:	angle kept going .
%flo:	angle kept going .
%mor:	noun|angle verb|keep-Part-Past-S-irr verb|go-Ger-S .
%gra:	1|2|NSUBJ-PASS 2|0|ROOT 3|2|XCOMP 4|2|PUNCT
*SPE:	and he twirled up the hill until he got to the top .
%flo:	and he twirled up the hill until he got to the top .
%mor:	cconj|and pron|he-Prs-Nom-S3 verb|twirl-Fin-Ind-Past-S3 adp|up det|the-Def-Art noun|hill sconj|until pron|he-Prs-Nom-S3 verb|get-Fin-Ind-Past-S3-irr adp|to det|the-Def-Art noun|top .
%gra:	1|3|CC 2|3|NSUBJ 3|0|ROOT 4|6|CASE 5|6|DET 6|3|OBL 7|9|MARK 8|9|NSUBJ 9|3|ADVCL 10|12|CASE 11|12|DET 12|9|OBL 13|3|PUNCT
*GES:	twirled up the hill .
%flo:	twirled up the hill .
%mor:	verb|twirl-Fin-Ind-Past-S1 adp|up det|the-Def-Art noun|hill-Acc .
%gra:	1|0|ROOT 2|1|COMPOUND-PRT 3|4|DET 4|1|OBJ 5|1|PUNCT
*GES:	until he got to the to .
%flo:	until he got to the to .
%mor:	sconj|until pron|he-Prs-Nom-S3 verb|get-Fin-Ind-Past-S3-irr adp|to det|the-Def-Art noun|to .
%gra:	1|3|MARK 2|3|NSUBJ 3|0|ROOT 4|6|CASE 5|6|DET 6|3|OBL 7|3|PUNCT
