crates/clan/clan-core/tests/snapshots/transform_golden__flo_mor_gra@rust.snap
---
source: tests/transform_golden.rs
expression: "&rust_output"
---
*CHI:	it's I want cookies .
%flo:	it's I want cookies .
%mor:	pron|it~aux|be&PRES pron|I verb|want noun|cookie-PL .
%gra:	1|3|NSUBJ 2|1|AUX 3|0|ROOT 4|3|OBJ 5|3|PUNCT
*MOT:	Mommy will get them .
%flo:	Mommy will get them .
%mor:	propn|Mommy aux|will verb|get&INF pron|them .
%gra:	1|3|SUBJ 2|3|AUX 3|0|ROOT 4|3|OBJ 5|3|PUNCT
